
[h1]Changes to Events[/h1]
-earlier changes nullified
-changed all instances of "Adolf Hitler" and "Hitler" in events_l_english.yml to "[GER.GetLeader]"
-changed event "Rally to Zog" to "Rally to [ALB.GetLeader]"
-changed instances of Zog or King Zog to "[ALB.GetLeader]"

[h1]Changes to Factions[/h1]
-changed "Novus Imperium Romanum" to "Novum Imperium Romanum"
-changed "Chinese United Front" to the more proper "The Second United Front"
-changed "French Entente Alliance" to "The French Entente"

[h1]Changes to Focuses.[/h1]
-changed "Algerie France" to "Algérie Française" ("Algérie Française" means Algiers of a French kind in French; "Algerie France" is a French then English word.)

[h1]Changes to Misc.[/h1]
-changed "Josif Stalin" to "Joseph Stalin" in "Stalingrad Class" description
[strike]-added flags for Fascist Korea and Communist Korea. (The communist flag is the flag of North Korea, and the fascist flag has the blue replaced with full red, signifying the Rising Sun of Imperialist Japan) [/strike]
-changed "Josef Stalin" to "Joseph Stalin" in "Project 66" Description
-added an easter egg ;)
-changed "Location is originally owned by $TAG$$OWNED|H$." tooltip to "Location was originally owned by $TAG$$OWNED|H$." in the core_l_english.yml


[h1]Changelog[/h1]

[u]Feb 9.[/u]
-changed "Novus Imperium Romanum" to "Novum Imperium Romanum"
-changed "Sinkiang to Xinjiang"
-changed "Josif Stalin" to "Joseph Stalin" in "Stalingrad Class" description

[u]Feb 10.[/u]
-added flags for Fascist Korea and Communist Korea. (The communist flag is the flag of North Korea, and the fascist flag has the blue replaced with full red, signifying the Rising Sun of Imperialist Japan)
-changed Tannu Tuva to its proper communist name, Tuvan People's Republic
-corrected sentence "Madrid is ours again and we have the opportunity to make the age old city the center of Spain once again." to "Madrid is ours and we have opportunity to make the age old city the center of Spain again."