@@ -1,5 +1,5 @@
 ﻿l_english:
-
+#Hail Zog
  italy.1.t:0 "Albania Yields"
  italy.1.d:0 "The Albanian authorities have agreed to our demands, and [ALB.GetLeader] has been forced to abdicate. From now and until the end of time, Albania shall be Italian!"
  italy.1.a:0 "A glorious day."
