@@ -1,4 +1,4 @@
 ﻿l_english:
- french_entente_alliance:0 "The French Entente"
+ french_entente_alliance:0 "French Entente"
  italy_empire_faction:0 "Novum Imperium Romanum"
- chinese_united_front:0 "The Second United Front"
+ chinese_united_front:0 "Second United Front"
