@@ -42,8 +42,8 @@
 
 [h1]Changes to Factions[/h1]
 -changed "Novus Imperium Romanum" to "Novum Imperium Romanum"
--changed "Chinese United Front" to the more proper "The Second United Front"
--changed "French Entente Alliance" to "The French Entente"
+-changed "Chinese United Front" to the more proper "Second United Front"
+-changed "French Entente Alliance" to "French Entente"
 
 [h1]Changes to Focuses.[/h1]
 -changed "Algerie France" to "Algérie Française" ("Algérie Française" means Algiers of a French kind in French; "Algerie France" is a French then English word.)
@@ -143,5 +143,6 @@ Date TBD
 -changed "Ostpreussen" state to "Ostpreußen"
 -changed "Nanjing" victory point to "Nanking"
 -changed "Chongqing" victory point to "Chungking"
+-took "the" off of faction names
 
  Copyright 2017 Dick Bong, Ace of Aces
